--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,19 @@
 <resources>
     <string name="app_name">Flight Data Recorder</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="roll">Roll</string>
+    <string name="pitch">Pitch</string>
+    <string name="yaw">Yaw</string>
+    <string name="altitude">Altitude</string>
+
+    <string name="action_reset">Reset</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_history">Flight History</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
