--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="start">Start</string>
     <string name="stop">Stop</string>
 
+    <string name="zeroTime">00:00:00</string>
+
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
     <string name="roll">Roll</string>
