Improve empty history view strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="action_reset">Reset</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_history">Flight History</string>
+
+    <string name="noHistory">No flights recorded yet.</string>
 </resources>
