--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="yaw">Yaw</string>
     <string name="altitude">Altitude</string>
 
-    <string name="action_reset">Reset</string>
+    <string name="action_delete_all">Delete All Flights</string>
+    <string name="action_export">Export</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_history">Flight History</string>
 
