--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="title_activity_history">Flight History</string>
 
     <string name="noHistory">No flights recorded yet.</string>
+    <string name="title_activity_flight_detail">Flight Path</string>
 </resources>
