--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">Flight Data Recorder</string>
 
-    <string name="start">Start</string>
-    <string name="stop">Stop</string>
+    <string name="start">Start Logging</string>
+    <string name="stop">Stop Logging</string>
 
     <string name="zeroTime" translatable="false">00:00:00</string>
+    <string name="zeroDeg" translatable="false">   0.00°</string>
+    <string name="zeroCoord" translatable="false">000° 00’ 00’’  </string>
+    <string name="zeroFt">  0.00 ft.</string>
 
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
@@ -26,4 +29,6 @@
     <string name="dialogDeleteMessage">This will erase all of your flight records.</string>
     <string name="historyErased">Flight history cleared.</string>
     <string name="dialogDeleteTitle">Reset flight history?</string>
+    <string name="viewHistory">View History</string>
+
 </resources>
